#406 Displaying navigation instructions on navigation bar when app in background